Sat Jun 16 15:19:29 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSCell.m ([-performClick:]): Call setNextState:
	also when we have no control view.
	
Sat Jun 16 14:53:05 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	Patches by Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>.
	* Source/NSBrowser.m ([-keyDown:]): Added missing return - in the
	case that TAB was pressed.
	* Source/NSCell.m ([-performClick:]): Call setNextState:.
	* Source/NSFontPanel.m ([-_initWithoutGModel]): Use defer=YES when
	initializing the panel.  Set up the next key view chain.  Set the
	initial first responder to be the Set button.
	([-fieldEditor:forObject:]): New method.
	* Source/NSPanel.m ([GSAlertPanel
	-initWithContentRect:styleMask:backing:defer:screen:]): Set up the
	next key view chain.
	
Wed Jun 13 02:36:44 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSBitmapImageRep.m ([+imageRepsWithData:]): Replaced
	[self class] with self.  ([+imageUnfilteredFileTypes]): add
	extensions directly rather than using a temporary array.
	([+imageRepsWithFile:]): As a temporary bug fix, evaluate
	extension manually: if it is `tiff' or `tif', use libtiff;
	otherwise, try backend code.
	
2001-06-11  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/NSSavePanel.m ([NSSavePanel -_initWithoutGModel]): do not set
	the max number of columns for the browser.

	* Source/NSBrowser.m ([NSBrowser -tile]): control column width and
	recalculate number of visible columns.
	([NSBrowser -setMaxVisibleColumns:]): moved code in -tile.
	([NSBrowser -displayAllColumns]): removed redundant methods.
	([NSBrowser -initWithFrame:]): set _minColumnWidth to 100.0
	([NSBrowser -numberOfVisibleColumns]): fixed. Return the number or
	_visible_ columns. (not number of all loaded columns)
	([NSBrowser -scrollColumnToVisible:]): use -numberOfVisibleColumns
	instead of _maxVisibleColumns that could be 0.
	([NSBrowser -updateScroller]): likewise.
	([NSBrowser -scrollViaScroller:]): likewise.