@@ -1,3 +1,14 @@
+2001-06-23  Gregory John Casamento  <greg_casamento@yahoo.com
+	* Source/NSSpellChecker.m updated to use the guesses browser.  
+	Delegate methods implemented to fill in the guesses for the 
+	current misspelled word.
+
+2001-06-20  Gregory John Casamento  <greg_casamento@yahoo.com>
+	* Source/NSSpellChecker.m implementation 
+	* Source/NSSpellServer.m implementation 
+	* Tools/GSspell.m for the GSspell.service.
+	* Panel/SpellPanel.gmodel also added for the spell checker gui.
+
 Sat Jun 16 15:19:29 2001  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* Source/NSCell.m ([-performClick:]): Call setNextState:
